versions/11.4.4/stencil/components/menu/readme.md
# limel-menu



<!-- Auto Generated Below -->


## Properties

| Property   | Attribute  | Description                                         | Type                            |
| ---------- | ---------- | --------------------------------------------------- | ------------------------------- |
| `disabled` | `disabled` | Sets the disabled state of the menu.                | `boolean`                       |
| `items`    | --         | A list of items and separators to show in the menu. | `(ListItem \| ListSeparator)[]` |
| `label`    | `label`    | Is displayed on the default trigger button.         | `string`                        |
| `open`     | `open`     | Sets the open state of the menu.                    | `boolean`                       |


## Events

| Event    | Detail | Description                              |
| -------- | ------ | ---------------------------------------- |
| `cancel` |        | Is emitted when the menu is cancelled.   |
| `select` |        | Is emitted when a menu item is selected. |


----------------------------------------------

*Built with [StencilJS](https://stenciljs.com/)*
